# aiK

./: .gitignore  CMakeLists.txt  aiK.qrc  aik_worker.cpp  aik_worker.hpp  aikwidget.cpp  aikwidget.h  aikwidget.ui  app.rc  collapse_button.h  lock_mod.hpp  logview.cpp  logview.hpp  main.cpp  pipe.hpp  wintaskscheduler.cpp  wintaskscheduler.hpp
aik/: aik.cpp  aik.hpp  aik_types.cpp  aik_types.hpp  err.hpp  global_vars.hpp  shared_memory.cpp  shared_memory.hpp  shared_mutex.cpp  shared_mutex.hpp
aik/symbols/: aik_process.hpp  client_values.hpp
aik_control/: aik_process_values.cpp  aik_process_values.hpp  aik_worker.cpp  aik_worker.hpp  aik_write_instructions.cpp  aik_write_instructions.hpp
cmake/: FetchAionUser.cmake  PatchBinary.cmake
style/: style.cpp  style.hpp
